objects/hed__Test__c.object
<CustomObject>
    <description>An instance of a student taking a test.</description>
    <label>Test</label>
    <nameField>
        <displayFormat>TST-{0000}</displayFormat>
        <label>Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Source__c</fullName>
        <description>Indicates whether the applicant or an official source reported this test.</description>
        <inlineHelpText>Indicates whether the applicant or an official source reported this test.</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Reported</fullName>
                </value>
                <value>
                    <fullName>Official</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student who took the test.</description>
        <inlineHelpText>The student who took the test.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Test_Date__c</fullName>
        <description>The date the applicant or official source indicates the test was started.</description>
        <inlineHelpText>The date the applicant or official source indicates the test was started.</inlineHelpText>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Test_Type__c</fullName>
        <description>The formal name for the test taken.</description>
        <inlineHelpText>The formal name for the test taken.</inlineHelpText>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>GMAT</fullName>
                </value>
                <value>
                    <fullName>TOEFL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Date_Received__c</fullName>
        <description>The date the test score is added to the system, either by manual upload or directly from an official source.</description>
        <inlineHelpText>The date the test score is added to the system, either by manual upload or directly from an official source.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <description>The number of credits earned by completing the Test.</description>
        <inlineHelpText>The number of credits earned by completing the Test.</inlineHelpText>
        <label>Credits Earned</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Verification_Status__c</fullName>
        <description>Indicates the verification status of a credential.</description>
        <inlineHelpText>Indicates the verification status of a credential.</inlineHelpText>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <externalId>true</externalId>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hed__Verification_Status_Date__c</fullName>
        <description>The most recent date Verification Status changed.</description>
        <inlineHelpText>The most recent date Verification Status changed.</inlineHelpText>
        <label>Verification Status Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>